# harp

./: .env.example  .gitignore  DEVLOG.backup.md  DEVLOG.md  PLAN.md  README.md  app.py  conversation_history.json  conversation_history_chk.json  current_output.txt  harp.yaml  harp_workspace.code-workspace  llamaresponsetest.py  movefunction.py  pyguitk.py  pyproject.toml  record.py  requirements.txt  resample.py  speech_module.py  speech_module_continuous.py  speech_module_ollama.py  spike_gemini_voice.py  spike_ptt_gate.py  start_harp.bat  vadtest.py
.devcontainer/: devcontainer.json
Report/: Expanded_Completion_Report.md  Expanded_Completion_Report.tex
Sound/: soundexp.py
dashboard/: server.py
data/: Expanded_Completion_Report.tex  about-us.md  about.md  adr.md  attend-now.md  contact.md  department-page_achievements-6.md  department-page_bs-in-mechatronics-click-here.md  department-page_course-curriculum.md  department-page_department-alumni.md  department-page_department-in-media.md  department-page_events-6.md  department-page_funded-projects.md  department-page_lab-facilities-4.md  department-page_ncra.md  department-page_peos-4.md  department-page_plos-4.md  departments_department-of-mechatronics-engineering.md  exhibit-now.md  exhibitors.md  expo.md  faculty.md  harp.md  ignite_fb_post.md  index.md  media-kit.md  ncra.md  programme.md  programs.md  research.md  research_7368.md  research_advanced-manufacturing-and-automation-group.md  research_agrobotics-research-group.md  research_bio-robotics-group.md  research_micro-nano-robotics-group.md  robo-wars.md  (+3 more)
(+199 files in other folders)
