[project]
name = "harp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "google-genai>=2.10.0",
    "insightface>=1.0.1",
    "mediapipe>=0.10.35",
    "numpy>=2.5.0",
    "onnxruntime>=1.27.0",
    "openai>=2.0.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "sounddevice>=0.5.5",
    "websockets>=13.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
